--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -9,9 +9,9 @@
 
 name: ar71xx
 
-on:
-  schedule:
-    - cron: 0 20 * * *
+#on:
+#  schedule:
+#    - cron: 0 20 * * *
   push:
     branches: 
       - master
